<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.DetailCaseRecordFragment">


    <TextView
        android:id="@+id/tv_label_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/label_name_case"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_detail" />

    <TextView
        android:id="@+id/tv_description_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/label_detail_case"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="@+id/et_name_case"
        app:layout_constraintStart_toStartOf="@+id/et_name_case"
        app:layout_constraintTop_toBottomOf="@+id/et_name_case" />

    <EditText
        android:id="@+id/et_name_case"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_et_detail_case"
        android:inputType="text"

        app:layout_constraintEnd_toEndOf="@+id/tv_label_detail"
        app:layout_constraintStart_toStartOf="@+id/tv_label_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_detail" />

    <EditText
        android:id="@+id/et_description_case"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/hint_et_detail_description"
        android:inputType="textMultiLine"
        android:maxLines="25"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/cb_completed"
        app:layout_constraintEnd_toEndOf="@+id/tv_description_detail"
        app:layout_constraintStart_toStartOf="@+id/tv_description_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_detail" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/grey"
        android:text=""
        android:textColor="@color/black"
        android:visibility="gone"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_complete"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_complete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/light_green"
        android:text="@string/save"
        android:textColor="@color/black"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_label_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_completed"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@+id/cb_completed"
        app:layout_constraintStart_toStartOf="@+id/btn_complete"
        app:layout_constraintTop_toTopOf="@+id/cb_completed" />

    <CheckBox
        android:id="@+id/cb_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:scaleX="1.5"
        android:scaleY="1.5"

        app:layout_constraintBottom_toTopOf="@+id/btn_complete"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_date_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>